tests/snapshots/run_wpt_conformance__trtx_leakyRelu_float16_2D_tensor_positive_options_alpha.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "leaky_relu.https.any.js",
    "leakyRelu float16 2D tensor positive options.alpha",
    "trtx",
    "PASS",
)
